# vamos-buffers

./: .clang-format  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  DartConfiguration.tcl  Makefile  README.md  arbiter.c  arbiter.h  client.c  docker_commands.sh  event.c  event.h  eventinterface.h  events.c  install.sh  list.c  list.h  parallel_queue.c  parallel_queue.h  parallel_queue_mw.c  queue.c  queue.h  shamon.c  shamon.h  shamonConfig.cmake.in  shm.c  shm.h  signatures.c  signatures.h  source.c  source.h  stream.c  stream.h  streams.h  temp.sh  temp.txt  test.c  utils.c  vector-macro.h  (+2 more)
.github/workflows/: apisec-scan.yml  cmake-release.yml  cmake.yml  codeql.yml  msvc.yml
cmake/shamon/: shamonConfig.cmake.in
cmake/vamos-buffers/: vamos-buffers-config.cmake.in
core/: CMakeLists.txt  arbiter.c  arbiter.h  event.c  event.h  list-embedded.c  list-embedded.h  list.c  list.h  monitor.c  monitor.h  par_queue.c  par_queue.h  parallel_queue.c  parallel_queue.h  parallel_queue_mw.c  parallel_queue_mw.h  queue.c  queue.h  queue_spsc.c  queue_spsc.h  shamon.c  shamon.h  shm_string-macro.h  shm_string.c  shm_string.h  signatures.c  signatures.h  source.c  source.h  spsc_ringbuf.c  spsc_ringbuf.h  stream.c  stream.h  utils.c  utils.h  vector-aligned.c  vector-aligned.h  vector-macro.h  vector.c  (+1 more)
core/legacy/: par_queue_mw.c  par_queue_mw.h  queue-test.c  queue.c  queue.h
drfun/: CMakeLists.txt  calls.c  events.c  events.h  funs-inline.c  funs.c  test.c
drsyscalls/: CMakeLists.txt  syscalls.c
fastbuf/: CMakeLists.txt  Makefile  drio.c  events.c  events.h  gennums_hardcoded.c  isprime.c  monitor.c  shm_common.c  shm_common.h  shm_monitor.c  shm_monitor.h  shm_monitored.c  shm_monitored.h
include/shamon/core/: event.h  par_queue.h  stream.h  utils.h  vector-macro.h  vector.h
include/shamon/shmbuf/: buffer.h
include/shamon/streams/: stream-drregex.h  stream-funs.h  stream-generic.h  stream-regex.h  stream-regexrw.h  streams.h
include/vamos-buffers/core/: arbiter.h  event.h  list-embedded.h  list.h  monitor.h  par_queue.h  queue_spsc.h  shamon.h  signatures.h  source.h  spsc_ringbuf.h  stream.h  utils.h  vector-aligned.h  vector-macro.h  vector.h  vms_string-macro.h  vms_string.h
include/vamos-buffers/cpp/: event.h  ring_buffer.h  vector.h
include/vamos-buffers/shmbuf/: buffer.h  client.h  dbg.h
include/vamos-buffers/streams/: stream-drregex.h  stream-funs.h  stream-generic.h  stream-regex.h  stream-regexrw.h  streams.h
mmtest/: example1.c  example2.c  mm.c  mmbank.c  mmbankempty.c  mmempty.c  mmprimes-man.c  mmprimes.c  mmprimes_classic.c  monprimes.c
python/: shamon.py
shmbuf/: CMakeLists.txt  Makefile  aux-buffer.c  aux-buffer.h  buffer-aux.c  buffer-control.c  buffer-local.c  buffer-private.h  buffer-size.h  buffer-sub.c  buffer.c  buffer.h  client.c  client.h  monitor.h  shm.c  shm.h  utils.c
src/: CMakeLists.txt
src/core/: CMakeLists.txt  arbiter.c  event.c  list-embedded.c  list.c  monitor.c  par_queue.c  queue_spsc.c  shamon.c  shm_string.c  signatures.c  source.c  spsc_ringbuf.c  stream.c  utils.c  vector-aligned.c  vector.c  vms_string.c
src/core/legacy/: queue-test.c  queue.c  queue.h
src/shmbuf/: CMakeLists.txt  buffer-aux.c  buffer-control.c  buffer-dbg.c  buffer-local.c  buffer-private.h  buffer-sub.c  buffer.c  client.c  shm.c  shm.h  utils.c
src/streams/: CMakeLists.txt  stream-drregex.c  stream-funs.c  stream-generic.c  stream-regex.c  stream-regexrw.c  streams.c
src/streams/legacy/: stream-fastbuf-io.c  stream-fastbuf-io.h  stream-fds.c  stream-fds.h  stream-stdin.c  stream-stdin.h
streams/: CMakeLists.txt  stream-drregex.c  stream-drregex.h  stream-fastbuf-io.c  stream-fastbuf-io.h  stream-fds.c  stream-fds.h  stream-funs.c  stream-funs.h  stream-generic.c  stream-generic.h  stream-regex.c  stream-regex.h  stream-regexrw.c  stream-regexrw.h  stream-stdin.c  stream-stdin.h  streams.c  streams.h
streams/legacy/: stream-fastbuf-io.c  stream-stdin.c
tessla/bankmon/: Cargo.toml
tessla/bankmon/lib_tessla/: Cargo.toml  DO_NOT_MODIFY.md
tessla/bankmon/lib_tessla/src/: io.rs  lib.rs  list.rs  map.rs  parse.rs  set.rs  stream.rs  tuple.rs  value.rs
tessla/bankmon/src/: connector.rs  monitor.rs
tests/: CMakeLists.txt  Makefile  arbiter-buffer.c  buffer-test.c  fetch-test-2.c  fetch-test-3.c  fetch-test.c  list-test.c  queue-par-cbmc.c  queue-par-cbmc_2.c  queue-par-cbmc_3.c  queue-par-test-2.c  queue-par-test.c  queue-test.c  spsc-ringbuf-1.c  spsc-ringbuf-cbmc-1.c
tests/bench/: CMakeLists.txt  ringbufs.c
